in preview pane mode, when you open up a folder, the keyboard focus now
shifts to the message table.

added a progress dialog to caching multiple messages during disconnected
operation.  

changed the sorting method on the message tables.  now clicking a column
a second time will reverse the sort on that column.  doing a shift+click
will still explicitly do a reverse sort.

added an option to preview pane mode in which we don't auto-preview
the selected message.  hitting space or enter now previews the messages.
also added an option not to automatically select the first unread message.
these options are useful for situations in which a person doesn't want a
new message read automatically on folder load.

added keybindings for lots of stuff, including searches, printing, selecting
the next unread message, etc.  added a page showing the keybindings, 
available through the help menu or by pressing Alt-K.

fixed the keybindings on top-level message frames.  those should work now.

selecting a NewMessageWindow now selects either the to: field, the subject:
field, or the text body, depending on which ones are filled out.

changed the display algorithm so that several messages are loaded
before the folder window itself is shown.

made it so exiting pooka before all the messages are loaded doesn't result
in a bunch of exceptions.

improved the startup time, so that open folders show up more quickly.

fixed the popup menu on the attachment pane so that it shows up in the
right place (and isn't selected by default when you right click and 
release).  fixed a similar problem with the nodes in the Folder Tree.

fixed the keybindings in preview pane mode.

020429 release
--------------

fixed a NPE that could happen when switching from preview pane mode to
desktop pane mode.

fixed some minor bugs involving detaching windows.

fixed the theme support so that the default theme is actually used for
just about everything.
